Cargando proyecto en repositorio remoto_v4

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
           </div>
         </article>
         <!-- RANGE BAR -->
-        <div class="slidecontainer">
+        <!-- <div class="slidecontainer">
           <input type="range" min="0" max="100" step="25" class="slider" id="range_bar">
-        </div>
+        </div> -->
         <!-- PERIOD SWITCH -->
         <div class="period_switch">
           <p class="period_switch_text">Monthly Billing</p>
-          <label class="switch">
+          <!-- <label class="switch">
             <input type="checkbox" id="period_switch">
             <span class="sliderswitch round"></span>
-          </label>
+          </label> -->
           <p class="period_switch_text">Yearly Billing</p>
           <span class="period_switch_text_discount">25% discount</span>
           <span class="period_switch_text_discount_mobile">-25%</span>
