Aplicando estilo de color en texto Monthly Yearly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <!-- PERIOD SWITCH -->
         <div class="period_switch">
-          <p class="period_switch_text">Monthly Billing</p>
+          <p class="period_switch_text period_active">Monthly Billing</p>
           <label class="switch">
             <input type="checkbox" id="period_switch">
             <span class="sliderswitch round"></span>
