Ajustando detalles de estilos

--- a/index.html
+++ b/index.html
@@ -18,50 +18,7 @@
 <body>
   <!-- CONTAINER -->
   <main class="container">
-    <!-- CONTENT AREA --> 
-    <div class="content">
-      <article class="info_heading">
-        <h1 class="info_heading_title">Simple, traffic-based pricing</h1>
-        <h2 class="info_heading_subtitle">
-          Sign-up for our 30-day trial. No credit card required.
-        </h2>
-      </article>
-      <!-- CARD AREA -->
-      <div class="card">
-        <article class="card_heading">
-          <h2 class="card_heading_pageviews" id="pageviews">100K PAGEVIEWS</h2>
-          <div class="card_heading_price_container">
-            <h3 class="card_heading_price" id="price">$16.00</h3>
-            <span class="card_heading_period">/ month</span>
-          </div>
-        </article>
-        <!-- RANGE BAR -->
-        <div class="slidecontainer">
-          <input type="range" min="0" max="100" step="25" class="slider" id="range_bar">
-        </div>
-        <!-- PERIOD SWITCH -->
-        <div class="period_switch">
-          <p class="period_switch_text period_active">Monthly Billing</p>
-          <label class="switch">
-            <input type="checkbox" id="period_switch">
-            <span class="sliderswitch round"></span>
-          </label>
-          <p class="period_switch_text">Yearly Billing</p>
-          <span class="period_switch_text_discount">25% discount</span>
-          <span class="period_switch_text_discount_mobile">-25%</span>
-        </div>
-        <hr class="card_divider">
-        <!-- FOOTER CARD AREA -->
-        <footer class="footer">
-          <ul class="features">
-            <li class="features_item"><img src="images/icon-check.svg" class="features_item_icon" alt="icon check">Unlimited websites</li>
-            <li class="features_item"><img src="images/icon-check.svg" class="features_item_icon" alt="icon check">100% data ownership</li>
-            <li class="features_item"><img src="images/icon-check.svg" class="features_item_icon" alt="icon check">Email reports</li>
-          </ul>
-          <a href="javascript:;" class="footer_button" >Start my trial</a>
-        </footer>
-      </div>
-    </div>
+    <img src="design/desktop-design.jpg" alt="">
   </main>
 </body>
 
